# codingame-rust

./: .gitignore
.cargo/: config.toml
common/: Cargo.toml
common/src/: graph.rs  lib.rs  player.txt  simulator.rs
common/src/viewer/: player_mcts.rs  viewer.css  viewer.html
experiments/: Cargo.toml
experiments/src/: main.rs
fall_2020_witches_brew/: Cargo.toml  Witches_Brew.xlsx  distance_stock_order.txt  journal.txt  notes.txt
fall_2020_witches_brew/src/: game_witches_brew.rs  main.rs  player_1_wood2.rs  player_beam_3.rs  player_beam_4.rs  player_beam_5.rs  player_mcts_1.rs  player_mcts_2.rs  player_original.rs  player_random.rs  player_random_brewer.rs  player_wait.rs  scripts.rs
fall_2020_witches_brew/src/scripts/: calculate_mem_usage.rs  compute_shortest_path.rs  state_graph.rs
tic_tac_toe/: Cargo.toml  journal.txt  tictactoe.xlsx
tic_tac_toe/src/: game_tic_tac_toe.rs  main.rs  player.rs  player_mcts.rs  player_mcts_1.rs  player_mcts_2.rs  player_mcts_3.rs  player_mcts_4.rs  player_mcts_5.rs  player_mcts_6.rs  player_mcts_6_param.rs  player_original.rs  player_random.rs
wood_spirit/: Cargo.toml  journal.txt  notes.txt  wood_spirit.xlsx
wood_spirit/src/: game_wood_spirit.rs  main.rs  player_beam_1.rs  player_mcts_2.rs  player_mcts_3.rs  player_mcts_4.rs  player_random.rs
