[package]
name = "fall_2020_witches_brew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
common = { git = "file:///C:/Users/hhour/Desktop/codingame-rust/.git", rev="496177fdde98ea3fe0e53b8c8a50c04e622afe4f" }

[profile.dev]
debug = true