[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rand = "0.8.3"
common = { git = "file:///C:/Users/hhour/Desktop/codingame-rust/.git", rev="a02a1d1e50d728d844cb0086041af600c40fb19c" }

[profile.dev]
debug = true