[package]
name = "wood_spirit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
common = { git = "file:///C:/Users/hhour/Desktop/codingame-rust/.git", rev="73e05d84f4030701a4f38a132acaddb0e7f67696" }
# common = { path = "../common" }

[profile.dev]
debug = true